--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -2,6 +2,8 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Kp9-FN-pCP">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Collect-->
@@ -68,10 +70,10 @@
             </objects>
             <point key="canvasLocation" x="1246" y="293"/>
         </scene>
-        <!--Publish RootVC-->
+        <!--All Publications-->
         <scene sceneID="TRz-H0-Ogd">
             <objects>
-                <viewController id="qaa-G1-Puy" customClass="FCPublishRootVC" customModule="FoodCollector" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="All Publications" id="qaa-G1-Puy" customClass="FCPublishRootVC" customModule="FoodCollector" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="wYH-Xz-JC6"/>
                         <viewControllerLayoutGuide type="bottom" id="cW1-74-r4k"/>
@@ -82,7 +84,7 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="F1S-aM-6hz">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
-                                <color key="backgroundColor" red="0.71174349059999997" green="1" blue="0.54481240639999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="SWN-ck-gEi">
                                     <size key="itemSize" width="320" height="90"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -97,34 +99,79 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="TEMPFoodIcon" translatesAutoresizingMaskIntoConstraints="NO" id="PRi-xz-AS1">
-                                                    <rect key="frame" x="231" y="1" width="88" height="88"/>
-                                                    <color key="backgroundColor" red="0.60000002379999995" green="0.40000000600000002" blue="0.20000000300000001" alpha="0.29999999999999999" colorSpace="calibratedRGB"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7JS-sO-3EK" userLabel="Status">
-                                                    <rect key="frame" x="25" y="46" width="204" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0PR-vp-DHe" userLabel="Title">
+                                                    <rect key="frame" x="8" y="0.0" width="212" height="47"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="47" id="ZWg-gf-B5a"/>
+                                                        <constraint firstAttribute="height" constant="47" id="nQI-si-kop"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="20"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7JS-sO-3EK" userLabel="Status">
+                                                    <rect key="frame" x="23" y="46" width="197" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OjG-g6-qJx" userLabel="Gray Line">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Green-dot" translatesAutoresizingMaskIntoConstraints="NO" id="VJr-uC-AAG" userLabel="Status Icon">
+                                                    <rect key="frame" x="8" y="53" width="7" height="7"/>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TEMPFoodIcon" translatesAutoresizingMaskIntoConstraints="NO" id="PRi-xz-AS1" userLabel="FoodImage">
+                                                    <rect key="frame" x="230" y="0.0" width="90" height="90"/>
+                                                    <color key="backgroundColor" red="0.60000002379999995" green="0.40000000600000002" blue="0.20000000300000001" alpha="0.29999999999999999" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="PRi-xz-AS1" secondAttribute="height" multiplier="1:1" id="PX9-wl-4KQ"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OjG-g6-qJx" userLabel="Gray Line">
                                                     <rect key="frame" x="0.0" y="89" width="320" height="1"/>
                                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="1" id="9pc-XU-etS"/>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="320" id="zoP-DQ-HnW"/>
+                                                    </constraints>
                                                 </view>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Green-dot" translatesAutoresizingMaskIntoConstraints="NO" id="VJr-uC-AAG">
-                                                    <rect key="frame" x="8" y="54" width="7" height="7"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0PR-vp-DHe" userLabel="Title">
-                                                    <rect key="frame" x="8" y="0.0" width="219" height="47"/>
-                                                    <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="21"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="PRi-xz-AS1" firstAttribute="top" secondItem="3Li-R0-6s0" secondAttribute="top" id="2aQ-3l-2iJ"/>
+                                            <constraint firstItem="7JS-sO-3EK" firstAttribute="top" secondItem="3Li-R0-6s0" secondAttribute="topMargin" constant="38" id="8aq-Ew-nty"/>
+                                            <constraint firstItem="PRi-xz-AS1" firstAttribute="leading" secondItem="0PR-vp-DHe" secondAttribute="trailing" constant="4" id="8za-Bg-H8F"/>
+                                            <constraint firstItem="0PR-vp-DHe" firstAttribute="top" secondItem="3Li-R0-6s0" secondAttribute="topMargin" id="9iB-9s-zL6"/>
+                                            <constraint firstItem="PRi-xz-AS1" firstAttribute="top" secondItem="3Li-R0-6s0" secondAttribute="topMargin" id="CdR-Ep-UYt"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="7JS-sO-3EK" secondAttribute="bottom" constant="15" id="EyZ-wR-XTd"/>
+                                            <constraint firstItem="OjG-g6-qJx" firstAttribute="bottom" secondItem="PRi-xz-AS1" secondAttribute="bottom" id="Gug-7c-akP"/>
+                                            <constraint firstAttribute="centerX" secondItem="PRi-xz-AS1" secondAttribute="centerX" id="KjF-uV-Mfr"/>
+                                            <constraint firstItem="VJr-uC-AAG" firstAttribute="centerY" secondItem="7JS-sO-3EK" secondAttribute="centerY" id="Ma5-fo-h1S"/>
+                                            <constraint firstItem="VJr-uC-AAG" firstAttribute="leading" secondItem="0PR-vp-DHe" secondAttribute="leading" id="U9n-7I-gId"/>
+                                            <constraint firstItem="OjG-g6-qJx" firstAttribute="leading" secondItem="3Li-R0-6s0" secondAttribute="leading" id="VNV-xN-09s"/>
+                                            <constraint firstItem="OjG-g6-qJx" firstAttribute="top" secondItem="PRi-xz-AS1" secondAttribute="bottom" id="X0K-AC-qz3"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="PRi-xz-AS1" secondAttribute="bottom" id="XWW-lz-Nyw"/>
+                                            <constraint firstItem="PRi-xz-AS1" firstAttribute="leading" secondItem="7JS-sO-3EK" secondAttribute="trailing" constant="4" id="Z8d-vc-Jp6"/>
+                                            <constraint firstItem="OjG-g6-qJx" firstAttribute="top" secondItem="PRi-xz-AS1" secondAttribute="bottom" id="akb-40-pvq"/>
+                                            <constraint firstItem="0PR-vp-DHe" firstAttribute="leading" secondItem="3Li-R0-6s0" secondAttribute="leadingMargin" id="cmC-vv-GAj"/>
+                                            <constraint firstItem="OjG-g6-qJx" firstAttribute="trailing" secondItem="3Li-R0-6s0" secondAttribute="trailingMargin" id="dGg-28-XgV"/>
+                                            <constraint firstItem="PRi-xz-AS1" firstAttribute="leading" secondItem="7JS-sO-3EK" secondAttribute="trailing" constant="4" id="fkT-Qc-YW2"/>
+                                            <constraint firstAttribute="trailing" secondItem="PRi-xz-AS1" secondAttribute="trailing" id="ikd-AN-9Gv"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="PRi-xz-AS1" secondAttribute="trailing" id="rCm-PT-DyH"/>
+                                            <constraint firstItem="PRi-xz-AS1" firstAttribute="centerY" secondItem="3Li-R0-6s0" secondAttribute="centerY" id="sKq-Ed-jhb"/>
+                                            <constraint firstItem="OjG-g6-qJx" firstAttribute="bottom" secondItem="3Li-R0-6s0" secondAttribute="bottomMargin" id="vLd-3D-QJx"/>
+                                            <constraint firstItem="7JS-sO-3EK" firstAttribute="leading" secondItem="3Li-R0-6s0" secondAttribute="leadingMargin" constant="15" id="wUE-tF-Rhh"/>
+                                        </constraints>
                                         <size key="customSize" width="320" height="90"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="Gug-7c-akP"/>
+                                                <exclude reference="X0K-AC-qz3"/>
+                                                <exclude reference="akb-40-pvq"/>
+                                                <exclude reference="KjF-uV-Mfr"/>
+                                                <exclude reference="fkT-Qc-YW2"/>
+                                            </mask>
+                                        </variation>
                                         <connections>
                                             <outlet property="FCPublisherEventImage" destination="PRi-xz-AS1" id="NJS-Nv-NR7"/>
                                             <outlet property="FCPublisherEventStatus" destination="7JS-sO-3EK" id="aWm-kA-q15"/>
@@ -148,7 +195,7 @@
                             <constraint firstItem="cW1-74-r4k" firstAttribute="top" secondItem="F1S-aM-6hz" secondAttribute="bottom" id="v9v-B7-wOH"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="bjZ-lv-Ao0">
+                    <navigationItem key="navigationItem" title="My Publications" id="bjZ-lv-Ao0">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="aGi-dR-bYS">
                             <connections>
                                 <segue destination="mvG-Ly-gH3" kind="show" identifier="showPublicationEditorTVC" id="o0R-Pf-5ey"/>
