--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Kp9-FN-pCP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Kp9-FN-pCP">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -203,6 +203,7 @@
                                             <outlet property="FCPublisherEventStatus" destination="7JS-sO-3EK" id="aWm-kA-q15"/>
                                             <outlet property="FCPublisherEventStatusIcon" destination="VJr-uC-AAG" id="IpN-dm-0zt"/>
                                             <outlet property="FCPublisherEventTitle" destination="0PR-vp-DHe" id="ZAR-KB-9AH"/>
+                                            <segue destination="mvG-Ly-gH3" kind="show" identifier="showEditPublicationEditorTVC" id="dtv-FP-d6m"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -224,7 +225,7 @@
                     <navigationItem key="navigationItem" title="My Publications" id="bjZ-lv-Ao0">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="aGi-dR-bYS">
                             <connections>
-                                <segue destination="mvG-Ly-gH3" kind="show" identifier="showPublicationEditorTVC" id="o0R-Pf-5ey"/>
+                                <segue destination="mvG-Ly-gH3" kind="show" identifier="showNewPublicationEditorTVC" id="o0R-Pf-5ey"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -234,7 +235,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vPV-wW-e7y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1996" y="1024"/>
+            <point key="canvasLocation" x="2058" y="1036"/>
         </scene>
         <!--Publication EditorTVC-->
         <scene sceneID="vxS-RO-fKE">
@@ -245,11 +246,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" restorationIdentifier="publicationEditorTVCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="publicationEditorTVCell" id="8xP-wr-nmK">
+                            <tableViewCell contentMode="scaleToFill" restorationIdentifier="publicationEditorTVCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="publicationEditorTVCell" textLabel="Hdw-IY-Nyj" style="IBUITableViewCellStyleDefault" id="8xP-wr-nmK">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8xP-wr-nmK" id="gp5-K1-hzy">
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Hdw-IY-Nyj">
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="oab-y0-LFY" kind="show" identifier="showPublicationTitleEditor" id="38C-1p-npk"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -300,9 +312,78 @@
             </objects>
             <point key="canvasLocation" x="1241" y="1036"/>
         </scene>
+        <!--Title-->
+        <scene sceneID="45u-pw-aH5">
+            <objects>
+                <viewController title="Title" id="oab-y0-LFY" customClass="FCPublishTitleEditorVC" customModule="FoodCollector" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VWY-s5-usM"/>
+                        <viewControllerLayoutGuide type="bottom" id="q9J-Sy-SZD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="XXa-l4-Ceq">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zZj-M1-w8b">
+                                <rect key="frame" x="16" y="128" width="568" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gIP-NL-IBt">
+                                <rect key="frame" x="252" y="198" width="96" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="96" id="4gh-z7-9RJ"/>
+                                </constraints>
+                                <state key="normal" title="Save">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="pubSaveBtn:" destination="oab-y0-LFY" eventType="touchUpInside" id="fTt-gG-3l1"/>
+                                    <segue destination="mvG-Ly-gH3" kind="show" id="NDU-fk-55L"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="gIP-NL-IBt" firstAttribute="top" secondItem="zZj-M1-w8b" secondAttribute="bottom" constant="40" id="9HB-Jn-2Q9"/>
+                            <constraint firstItem="zZj-M1-w8b" firstAttribute="leading" secondItem="XXa-l4-Ceq" secondAttribute="leadingMargin" id="E9J-Bq-ZcX"/>
+                            <constraint firstAttribute="centerX" secondItem="gIP-NL-IBt" secondAttribute="centerX" id="KTf-11-LcG"/>
+                            <constraint firstItem="zZj-M1-w8b" firstAttribute="top" secondItem="VWY-s5-usM" secondAttribute="bottom" constant="64" id="gtO-RU-lUC"/>
+                            <constraint firstAttribute="centerX" secondItem="zZj-M1-w8b" secondAttribute="centerX" id="xr3-l9-PPX"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="pubTitleText" destination="zZj-M1-w8b" id="lRu-Ef-3Nw"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="edS-Na-q4c" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2058" y="1784"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="REB-Z3-hnr">
+            <objects>
+                <viewController id="knb-ML-FSu" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="tuI-w1-NC6"/>
+                        <viewControllerLayoutGuide type="bottom" id="JnO-dG-nBf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="b3h-2F-mmh">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SEV-YR-JYs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2792" y="1784"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Green-dot" width="7" height="7"/>
         <image name="TEMPFoodIcon" width="64" height="64"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="NDU-fk-55L"/>
+    </inferredMetricsTieBreakers>
 </document>
